# voicememo-demo

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.claude/: settings.json
.claude/hooks/: format-and-check.sh
.github/workflows/: ci.yml
backend/: .env.example  CLAUDE.md  Makefile  clovernote.db  main.py  pyproject.toml
backend/.claude/: .gitignore  settings.json
backend/.claude/hooks/: format-and-check.sh  review-python.sh
backend/app/: main.py
backend/app/api/v1/: auth.py  router.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: user.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py
docs/: BACKEND_TECHSPEC.md  FRONTEND_TECHSPEC.md  PLAN.md
src/: App.tsx
src/api/: auth.ts  client.ts  index.ts  memos.ts  rag.ts  voice.ts
src/components/audio/: AudioRecorder.tsx  TranscriptionDisplay.tsx  WaveformVisualizer.tsx  index.ts
src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
src/components/memos/: MemoCard.tsx  MemoEditor.tsx  MemoList.tsx  TagInput.tsx  index.ts
src/components/search/: MessageInput.tsx  RAGChat.tsx  (+5 more)
src/hooks/: index.ts  useAudioRecorder.ts  useInfiniteScroll.ts  useWebSocket.ts
src/lib/: audio.ts  constants.ts  formatters.ts  validators.ts
src/pages/: Home.tsx  Login.tsx  MemoDetail.tsx  Record.tsx  Register.tsx  Search.tsx  Settings.tsx  index.ts
src/stores/: authStore.ts  index.ts  memoStore.ts  recordingStore.ts  searchStore.ts
src/types/: api.ts  components.ts  index.ts  models.ts
tests/: setup.ts
(+5 files in other folders)
