[project]
name = "voicememo-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dependency-injector>=4.48.1",
    "fastapi>=0.116.1",
    "orjson>=3.11.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]
